--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="text-white">Email:
                     <span class="text-danger">info@progressivepower.com.pk</span>
                 </div>
-                <a href="#" class="nav-link active">Home</a>
+                <a href="./index.html" class="nav-link active">Home</a>
                 <a href="#" class="nav-link">About Us</a>
                 <a href="#" class="nav-link">PPG Domain</a>
                 <a href="#" class="nav-link">Field of Experience</a>
@@ -390,7 +390,7 @@
         </section>
         <!-- Copyright -->
         <div class="text-center p-4 copyright" style="background-color: #af2424">
-            Copyrights © 2016 Progressive Power Generators (Pvt) Limited (Ppg), All Rights Reserved
+            <p>Copyrights © 2016 Progressive Power Generators (Pvt) Limited (Ppg), All Rights Reserved</p>
         </div>
         <!-- Copyright -->
     </footer>
