--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progressive Power - Generators</title>
+    <!-- Our Stylesheet -->
     <link rel="stylesheet" href="style.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="bootstrap.css">
@@ -59,7 +60,7 @@
                     <span class="text-danger">info@progressivepower.com.pk</span>
                 </div>
                 <a href="./index.html" class="nav-link active">Home</a>
-                <a href="#" class="nav-link">About Us</a>
+                <a href="./aboutus.html" class="nav-link">About Us</a>
                 <a href="#" class="nav-link">PPG Domain</a>
                 <a href="#" class="nav-link">Field of Experience</a>
                 <a href="#" class="nav-link">Engineering Services</a>
@@ -73,8 +74,8 @@
         <div class="container position-sticky">
             <!-- Desktop Menu - Visible on large screens -->
             <div class="desktop-menu d-none d-lg-flex justify-content-center w-100">
-                <a href="#" class="nav-link active">Home</a>
-                <a href="#" class="nav-link">About Us</a>
+                <a href="./index.html" class="nav-link active">Home</a>
+                <a href="./aboutus.html" class="nav-link">About Us</a>
                 <a href="#" class="nav-link">PPG Domain</a>
                 <a href="#" class="nav-link">Field of Experience</a>
                 <a href="#" class="nav-link">Engineering Services</a>
@@ -296,103 +297,99 @@
     </div>
 
     <!-- Footer Start -->
-    <footer class="text-center text-lg-start bg-black">
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
-            <div class="me-5 d-none d-lg-block">
-                <span>Get connected with us on social networks:</span>
-            </div>
-            <div>
-                <a href="./index.html" class="me-4 text-reset text-decoration-none">
-                    <i class="fab fa-facebook-f icon"></i>
-                </a>
-                <a href="./index.html" class="me-4 text-reset text-decoration-none">
-                    <i class="fab fa-twitter icon"></i>
-                </a>
-                <a href="./index.html" class="me-4 text-reset text-decoration-none">
-                    <i class="fab fa-linkedin icon"></i>
-                </a>
-            </div>
-        </section>
-        <section class="container-fluid">
-            <div class="ms-5 text-md-start mt-5">
-                <div class="row mt-3 ">
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                        <!-about ppg -->
-                            <h5 class="text-uppercase mb-4">
-                                about ppg
-                            </h5>
-                            <p class="text-muted">
-                                PPG is a Power Engineering Services Company (Cummins/ CAT & Power GenTeam),
-                                Registered
-                                with SECP with a Mission to provide complete Sales and Service solution to our
-                                Valued
-                                Customers.
-                            </p>
-                    </div>
-                    <div class="col-md-2 col-lg-2 col-xl-2 ">
-                        <h5 class="text-uppercase ms-4 mb-4">
-                            information
-                        </h5>
-                        <p>
-                            <a href="#" class="nav-link active">Home</a>
-                        </p>
-                        <p>
-                            <a href="#" class="nav-link">About Us</a>
-                        </p>
-                        <p>
-                            <a href="#" class="nav-link">PPG Domain</a>
-                        </p>
-                        <p>
-                            <a href="#" class="nav-link">Field of Experience</a>
-                        </p>
-                        <p>
-                            <a href="#" class="nav-link">Engineering Services</a>
-                        </p>
-                        <p>
-                            <a href="#" class="nav-link">Contact Us</a>
-                        </p>
-                    </div>
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4 ">
-                        <h5 class="text-uppercase mb-4">head office</h5>
-                        <p>
-                            <i class="fas fa-home me-3"></i>
-                            Suite # 403, Anum Estate, Near Baloch Bridge, Main Shahrah-E-Faisal, Karachi
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i> +92-21-34322307-8</p>
-                        <p><i class="fas fa-print me-3"></i> FAX: +92-21-34322308</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            info@progressivepower.com.pk
-                        </p>
-                    </div>
-                    <div class="col-lg-4 col-md-6 mb-4 mb-md-0 ms-">
-                        <h5 class="text-uppercase mb-4">business hours</h5>
-                        <p>Our support available to help you 24 hours a day, seven days a week.</p>
-                        <table class="text-white">
-                            <tbody>
-                                <tr class="border-bottom">
-                                    <td class="pb-2">Monday - Friday:</td>
-                                    <td>09:00am to 05:00pm</td>
-                                </tr>
-                                <tr class="border-bottom">
-                                    <td class="py-2">Saturday</td>
-                                    <td>10am to 02:00pm</td>
-                                </tr>
-                                <tr class="border-bottom">
-                                    <td class="py-2">Sunday:</td>
-                                    <td>closed</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
+    <footer class="bg-black text-white">
+        <!-- Social Media Section -->
+        <section class="container-fluid py-3 border-bottom">
+            <div class="row align-items-center">
+                <div class="col-12 col-lg-6 text-center text-lg-start mb-2 mb-lg-0">
+                    <span class="d-none d-lg-inline">Get connected with us on social networks:</span>
+                </div>
+                <div class="col-12 col-lg-6 text-center text-lg-end">
+                    <a href="./index.html" class="text-white me-3 text-decoration-none">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="./index.html" class="text-white me-3 text-decoration-none">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="./index.html" class="text-white me-3 text-decoration-none">
+                        <i class="fab fa-linkedin"></i>
+                    </a>
                 </div>
             </div>
         </section>
+
+        <!-- Main Footer Content -->
+        <section class="container-fluid py-4">
+            <div class="row">
+                <!-- About PPG -->
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
+                    <h5 class="text-uppercase mb-3">about ppg</h5>
+                    <p class="text-muted">
+                        PPG is a Power Engineering Services Company (Cummins/ CAT & Power GenTeam),
+                        Registered with SECP with a Mission to provide complete Sales and Service solution to our
+                        Valued Customers.
+                    </p>
+                </div>
+
+                <!-- Information -->
+                <div class="col-12 col-md-6 col-lg-2 mb-4">
+                    <h5 class="text-uppercase mb-3">information</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><a href="./index.html" class="text-white text-decoration-none">Home</a></li>
+                        <li class="mb-2"><a href="./aboutus.html" class="text-white text-decoration-none">About Us</a>
+                        </li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">PPG Domain</a></li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Field of Experience</a>
+                        </li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Engineering Services</a>
+                        </li>
+                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contact Us</a></li>
+                    </ul>
+                </div>
+
+                <!-- Head Office -->
+                <div class="col-12 col-md-6 col-lg-3 mb-4">
+                    <h5 class="text-uppercase mb-3">head office</h5>
+                    <ul class="list-unstyled">
+                        <li class="mb-2"><i class="fas fa-home me-2"></i>Suite # 403, Anum Estate, Near Baloch Bridge,
+                            Main Shahrah-E-Faisal, Karachi</li>
+                        <li class="mb-2"><i class="fas fa-phone me-2"></i> +92-21-34322307-8</li>
+                        <li class="mb-2"><i class="fas fa-print me-2"></i> FAX: +92-21-34322308</li>
+                        <li class="mb-2"><i class="fas fa-envelope me-2"></i>info@progressivepower.com.pk</li>
+                    </ul>
+                </div>
+
+                <!-- Business Hours -->
+                <div class="col-12 col-md-6 col-lg-4 mb-4">
+                    <h5 class="text-uppercase mb-3">business hours</h5>
+                    <p>Our support available to help you 24 hours a day, seven days a week.</p>
+                    <table class="w-100">
+                        <tbody>
+                            <tr class="border-bottom">
+                                <td class="py-2">Monday - Friday:</td>
+                                <td class="py-2 text-end">09:00am to 05:00pm</td>
+                            </tr>
+                            <tr class="border-bottom">
+                                <td class="py-2">Saturday</td>
+                                <td class="py-2 text-end">10am to 02:00pm</td>
+                            </tr>
+                            <tr>
+                                <td class="py-2">Sunday:</td>
+                                <td class="py-2 text-end">closed</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+
         <!-- Copyright -->
-        <div class="text-center p-4 copyright" style="background-color: #af2424">
-            <p>Copyrights © 2016 Progressive Power Generators (Pvt) Limited (Ppg), All Rights Reserved</p>
+        <div class="copyright py-3">
+            <div class="container-fluid text-center">
+                <p class="mb-0">Copyrights © 2016 Progressive Power Generators (Pvt) Limited (Ppg), All Rights Reserved
+                </p>
+            </div>
         </div>
-        <!-- Copyright -->
     </footer>
     <!-- Footer End -->
 
