--- a/aboutus.html
+++ b/aboutus.html
@@ -117,37 +117,61 @@
             </p>
             <div class="card-group gap-3">
                 <div class="card">
-                    <img src="./Images/about1.jpeg"
-                        class="card-img-top border-btm" alt="Sound & weather proof Canopy" style="height: 245px;">
+                    <img src="./Images/about1.jpeg" class="card-img-top border-btm" alt="Sound & weather proof Canopy"
+                        style="height: 245px;">
                     <div class="card-body">
                         <h5 class="card-title fw-bolder">Sound & weather proof Canopy</h5>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/about2.jpg" 
-                    class="card-img-top" alt="Auto Main Failure Panel (AMF)" style="width: 358px; height: 245px;" >
+                    <img src="./Images/about2.jpg" class="card-img-top" alt="Auto Main Failure Panel (AMF)"
+                        style="width: 358px; height: 245px;">
                     <div class="card-body">
                         <h5 class="card-title fw-bolder">Auto Main Failure Panel (AMF)</h5>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./Images/about3.jpeg" 
-                    class="card-img-top border-btm" style="width: 358px; height: 245px;" alt="">
+                    <img src="./Images/about3.jpeg" class="card-img-top border-btm" style="width: 358px; height: 245px;"
+                        alt="">
                     <div class="card-body">
                         <h5 class="card-title fw-bolder">Auto Transfer Switch (ATS)</h5>
                     </div>
                 </div>
             </div>
-            <ul>
-                <li class="about-content">Sound & weather proof Canopy,</li>
-                <li class="about-content">Auto Main Failure Panel (AMF),</li>
-                <li class="about-content">Auto Transfer Switch (ATS),</li>
-                <li class="about-content">Synchronizing panels,</li>
-                <li class="about-content">Switch Gears</li>
-                <li class="about-content">Bi-fuel Kits</li>
-                <li class="about-content">Electronic Control Modules (ECM) calibration Cummins, CAT, Perkins, Volvo &
-                    others</li>
-            </ul>
+            <div class="card-group gap-3 pt-3">
+                <div class="card">
+                    <img src="./Images/about4.jpeg" class="card-img-top border-btm" alt="Synchronizing panels"
+                        style="height: 245px;">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bolder">Synchronizing panels</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Images/about5.jpeg" class="card-img-top border-btm" alt="Switch Gears"
+                        style="width: 358px; height: 245px;">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bolder">Switch Gears</h5>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="./Images/about6.jpeg" class="card-img-top border-btm" style="width: 358px; height: 245px;"
+                        alt="Bi-fuel Kits">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bolder">Bi-fuel Kits</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="card-group gap-3 pt-3" style="width: 358px;">
+                <div class="card">
+                    <img src="./Images/about7.jpeg" class="card-img-top border-btm" 
+                    alt="Electronic Control Modules (ECM) calibration Cummins, CAT, Perkins, Volvo & others…" style="height: 245px;">
+                    <div class="card-body">
+                        <h5 class="card-title fw-bolder">Electronic Control Modules (ECM) calibration Cummins, CAT, Perkins, Volvo & others…</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="pt-3">
             <p class="about-content">PPG provide services round the clock to our valued customers, targeting 100%
                 customer satisfaction.</p>
         </div>
