--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                     team
                     all over Pakistan.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <a href="./index.html" target="_blank" rel="noopener noreferrer">
+                    <a href="./aboutus.html" target="_blank" rel="noopener noreferrer">
                         <button type="button" class="btn btn-lg  me-md-2">More Information</button>
                     </a>
                 </div>
@@ -269,8 +269,10 @@
                     requirement on priority basis. We are well trained and well equipped to provide all sorts
                     of Services in Power Gen field.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <button type="button" class="btn-lg px-lg-3 my-lg-3 detail-btn text-uppercase">more
-                        details</button>
+                    <a href="./engineeringServices.html" target="_blank">
+                        <button type="button" class="btn-lg px-lg-3 my-lg-3 detail-btn text-uppercase">more
+                            details</button>
+                    </a>
                 </div>
             </div>
         </div>
