--- a/engineeringServices.html
+++ b/engineeringServices.html
@@ -63,7 +63,7 @@
                 <a href="./aboutus.html" class="nav-link">About Us</a>
                 <a href="#" class="nav-link">PPG Domain</a>
                 <a href="#" class="nav-link">Field of Experience</a>
-                <a href="#" class="nav-link">Engineering Services</a>
+                <a href="./engineeringServices.html" class="nav-link">Engineering Services</a>
                 <a href="#" class="nav-link">Contact Us</a>
             </div>
         </div>
@@ -78,7 +78,7 @@
                 <a href="./aboutus.html" class="nav-link">About Us</a>
                 <a href="#" class="nav-link">PPG Domain</a>
                 <a href="#" class="nav-link">Field of Experience</a>
-                <a href="#" class="nav-link">Engineering Services</a>
+                <a href="./engineeringServices.html" class="nav-link">Engineering Services</a>
                 <a href="#" class="nav-link">Contact Us</a>
             </div>
         </div>
@@ -485,7 +485,7 @@
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">PPG Domain</a></li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Field of Experience</a>
                         </li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Engineering Services</a>
+                        <li class="mb-2"><a href="./engineeringServices.html" class="text-white text-decoration-none">Engineering Services</a>
                         </li>
                         <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contact Us</a></li>
                     </ul>
