--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
             </button>
         </div>
     </nav>
-
     <!-- Mobile Menu - Hidden by default -->
     <div class="mobile-menu" id="mobileMenu">
         <div class="container">
@@ -61,14 +60,13 @@
                 </div>
                 <a href="./index.html" class="nav-link active">Home</a>
                 <a href="./aboutus.html" class="nav-link">About Us</a>
-                <a href="#" class="nav-link">PPG Domain</a>
-                <a href="#" class="nav-link">Field of Experience</a>
+                <a href="./ppgDomain.html" class="nav-link">PPG Domain</a>
+                <a href="./fieldOfExpertise.html" class="nav-link">Field of Expertise</a>
                 <a href="./engineeringServices.html" class="nav-link">Engineering Services</a>
-                <a href="#" class="nav-link">Contact Us</a>
+                <a href="./contactUs.html" class="nav-link">Contact Us</a>
             </div>
         </div>
     </div>
-
     <!-- Mini Navigation Bar -->
     <nav class="mini-nav navbar navbar-expand-lg position-sticky sticky-header">
         <div class="container position-sticky">
@@ -76,15 +74,14 @@
             <div class="desktop-menu d-none d-lg-flex justify-content-center w-100">
                 <a href="./index.html" class="nav-link active">Home</a>
                 <a href="./aboutus.html" class="nav-link">About Us</a>
-                <a href="#" class="nav-link">PPG Domain</a>
-                <a href="#" class="nav-link">Field of Experience</a>
+                <a href="./ppgDomain.html" class="nav-link">PPG Domain</a>
+                <a href="./fieldOfExpertise.html" class="nav-link">Field of Expertise</a>
                 <a href="./engineeringServices.html" class="nav-link">Engineering Services</a>
-                <a href="#" class="nav-link">Contact Us</a>
+                <a href="./contactUs.html" class="nav-link">Contact Us</a>
             </div>
         </div>
     </nav>
     <!-- Main header End -->
-
     <!-- Hero Section Start -->
     <div class="container col-xxl-8 px-4 py-5">
         <div class="row flex-sm-row-reverse align-items-center g-5 py-3">
@@ -213,17 +210,12 @@
                 <h3 class="lh-1">ABOUT US PROGRESSIVE POWER</h3>
                 <p class="lh-lg">PPG is a Power Engineering Services Company (Cummins/ CAT & Power GenTeam), Registered
                     with SECP with a Mission to provide complete Sales and Service solution to our Valued
-                    Customers
-                    segment wise from Home, Commercial to Industries, Power Plants, Hospitals, Hotels, Telecom,
-                    Banking
-                    Sectors, Cement Sector, Marine, Automotive, Industrial, Oil & Gas Sector, Locomotive etc.
+                    Customers segment wise from Home, Commercial to Industries, Power Plants, Hospitals, Hotels, Telecom,
+                    Banking Sectors, Cement Sector, Marine, Automotive, Industrial, Oil & Gas Sector, Locomotive etc.
                 </p>
-                <p>We deal in Sales, Parts and After Market Support of new & refurbished equipment’s supported
-                    by
-                    well-equipped workshop, special tools, warehouse facilities and our dedicated & trained
-                    Cummins
-                    team
-                    all over Pakistan.</p>
+                <p class="lh-lg">We deal in Sales, Parts and After Market Support of new & refurbished equipment’s supported
+                    by well-equipped workshop, special tools, warehouse facilities and our dedicated & trained
+                    Cummins team all over Pakistan.</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
                     <a href="./aboutus.html" target="_blank" rel="noopener noreferrer">
                         <button type="button" class="btn btn-lg  me-md-2">More Information</button>
@@ -233,7 +225,6 @@
         </div>
     </div>
     <!-- Hero Section End -->
-
     <!-- Center Section Start -->
     <div class="center-sec p-2">
         <div class="text-center">
@@ -247,14 +238,13 @@
                 </p>
             </div>
             <div class="p-lg-4">
-                <a href="./index.html">
+                <a href="./contactUs.html" target="_blank">
                     <button type="button" class="text-uppercase contact-btn fw-bold">contact us now</button>
                 </a>
             </div>
         </div>
     </div>
     <!-- Center Section End -->
-
     <!-- Mini Section Start -->
     <div class="container-fluid">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
@@ -291,13 +281,15 @@
                     and professional response to all our customers within the customers’ budget. So as the power remains
                     accessible for all!</p>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-start">
-                    <button type="button" class="btn-lg px-lg-3 my-lg-3 detail-btn text-uppercase">more
-                        details</button>
+                    <a href="./ppgDomain.html" target="_blank">
+                        <button type="button" class="btn-lg px-lg-3 my-lg-3 detail-btn text-uppercase">more
+                            details</button>
+                    </a>
                 </div>
             </div>
         </div>
     </div>
-
+    <!-- Mini Section End -->
     <!-- Footer Start -->
     <footer class="bg-black text-white">
         <!-- Social Media Section -->
@@ -319,7 +311,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Main Footer Content -->
         <section class="container-fluid py-4">
             <div class="row">
@@ -332,7 +323,6 @@
                         Valued Customers.
                     </p>
                 </div>
-
                 <!-- Information -->
                 <div class="col-12 col-md-6 col-lg-2 mb-4">
                     <h5 class="text-uppercase mb-3">information</h5>
@@ -340,15 +330,16 @@
                         <li class="mb-2"><a href="./index.html" class="text-white text-decoration-none">Home</a></li>
                         <li class="mb-2"><a href="./aboutus.html" class="text-white text-decoration-none">About Us</a>
                         </li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">PPG Domain</a></li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Field of Experience</a>
+                        <li class="mb-2"><a href="./ppgDomain.html" class="text-white text-decoration-none">PPG
+                                Domain</a></li>
+                        <li class="mb-2"><a href="./fieldOfExpertise.html" class="text-white text-decoration-none">Field of Expertise</a>
                         </li>
-                        <li class="mb-2"><a href="./engineeringServices.html" class="text-white text-decoration-none">Engineering Services</a>
+                        <li class="mb-2"><a href="./engineeringServices.html"
+                                class="text-white text-decoration-none">Engineering Services</a>
                         </li>
-                        <li class="mb-2"><a href="#" class="text-white text-decoration-none">Contact Us</a></li>
+                        <li class="mb-2"><a href="./contactUs.html" class="text-white text-decoration-none">Contact Us</a></li>
                     </ul>
                 </div>
-
                 <!-- Head Office -->
                 <div class="col-12 col-md-6 col-lg-3 mb-4">
                     <h5 class="text-uppercase mb-3">head office</h5>
@@ -360,7 +351,6 @@
                         <li class="mb-2"><i class="fas fa-envelope me-2"></i>info@progressivepower.com.pk</li>
                     </ul>
                 </div>
-
                 <!-- Business Hours -->
                 <div class="col-12 col-md-6 col-lg-4 mb-4">
                     <h5 class="text-uppercase mb-3">business hours</h5>
@@ -384,7 +374,6 @@
                 </div>
             </div>
         </section>
-
         <!-- Copyright -->
         <div class="copyright py-3">
             <div class="container-fluid text-center">
@@ -396,11 +385,8 @@
     <!-- Footer End -->
 
 
-
-
     <!-- Our JavaScript -->
     <script src="app.js"></script>
-
 
     <!-- JavaScript dependencies Carousel-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
